tests/marouter/errors/format/vm/vm_false11/errors.marouter
Error: Not numeric vehicle number in line 'a          100'.
Quitting (on error).
